[package]
name = "token-monitor"
version = "0.1.0"
edition = "2021"
description = "AIサービスのトークン使用状況を監視する軽量デスクトップツール"

# 共有ロジック（取得・正規化・整形）
[lib]
name = "token_monitor"
path = "src/lib.rs"

# GUI = 既定バイナリ (src/main.rs) → token-monitor
# CLI = src/bin/tmctl.rs → tmctl（PoC / コンソール表示）

[dependencies]
# rustls-tls を使い OpenSSL/system TLS 依存を排除（環境非依存・クロスプラットフォームのため）
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
anyhow = "1"
eframe = { version = "0.29", features = ["persistence"] }
notify-rust = "4"

# バイナリサイズ削減（仕様の「小容量」要件）
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
